Added ViewProductDetails, Add to Cart Functionality, View/Edit cart Items, CheckoutPage design

--- a/src/css/AccountSettings.css
+++ b/src/css/AccountSettings.css
@@ -4,6 +4,7 @@
   min-height: 85vh;
   display: grid;
   justify-content: space-evenly;
+  padding-top: 15px;
 }
 .account-settings-page {
   padding: 20px;
