--- a/src/css/ProductsPage.css
+++ b/src/css/ProductsPage.css
@@ -15,7 +15,7 @@
 
 .product-card {
   border: 1px solid #ddd;
-  padding: 15px;
+  /* padding: 15px; */
   text-align: center;
   width: 200px;
   background-color: white;
@@ -32,14 +32,11 @@
 .product-image-box img {
   width: 100%; /* Fill the box width */
   height: 100%; /* Fill the box height */
-  /* position: absolute; */
   object-fit: contain; /* Preserve aspect ratio, cropping if necessary */
   object-position: center; /* Center the image inside the box */
   top: 0;
   bottom: 0;
   left: 0;
-  /* background-color: blue; */
-  /* transform: scale(1.05);*/
   transition: transform 0.3s ease;
   right: 0;
 }
@@ -48,7 +45,55 @@
   max-height: 86.4px;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 2px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   text-rendering: optimizeLegibility;
+}
+.product-link-div {
+  cursor: pointer;
+}
+.product-non-link-div {
+  padding: 15px;
+  background-color: #f2f2f2;
+}
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Popup box styling */
+.popup-box {
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px 30px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  width: 90%;
+  animation: slide-down 0.3s ease-out;
+}
+
+/* Heading and text */
+.popup-box h2 {
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #333;
+}
+
+.popup-box p {
+  margin-bottom: 20px;
+  color: #666;
+}
+
+.color-green {
+  color: green;
 }
