--- a/src/css/CheckoutPage.css
+++ b/src/css/CheckoutPage.css
@@ -76,6 +76,11 @@
   border-radius: 20px !important;
   margin-bottom: 5px;
 }
+.order-summary {
+  position: sticky !important;
+  top: 20px !important;
+  z-index: 10000;
+}
 
 @keyframes popup-show {
   from {
