Major updates to UI to consume the Restful API's

--- a/src/css/MyOrders.css
+++ b/src/css/MyOrders.css
@@ -137,3 +137,10 @@
   color: black !important;
   background-color: white !important;
 }
+
+.track-order-link {
+  text-decoration: none;
+}
+.track-order-link:hover {
+  text-decoration: underline;
+}
