--- a/src/css/CheckoutPage.css
+++ b/src/css/CheckoutPage.css
@@ -81,6 +81,10 @@
   top: 20px !important;
   z-index: 10000;
 }
+.error-msg {
+  color: red;
+  /* padding: 30px; */
+}
 
 @keyframes popup-show {
   from {
