--- a/src/css/ProductDetails.css
+++ b/src/css/ProductDetails.css
@@ -206,27 +206,27 @@ td {
 }
 /** Star Rating CSS */
 
-.star-rating {
+.star-rating-view {
   display: flex;
   gap: 2px;
   position: relative;
 }
 
-.star {
+.star-view {
   font-size: 1rem;
   position: relative;
   display: inline-block;
 }
 
-.star.full {
+.star-view.full {
   color: orange; /* Full star color */
 }
 
-.star.empty {
+.star-view.empty {
   color: lightgray; /* Empty star color */
 }
 
-.star.half {
+.star-view.half {
   width: 1.125rem;
 }
 
@@ -234,7 +234,7 @@ td {
   position: absolute;
   width: 1.18rem;
 }
-.star.half .half-filled {
+.star-view.half .half-filled {
   color: orange; /* Filled half color */
   position: absolute;
   top: 0;
@@ -244,7 +244,7 @@ td {
   z-index: 1; /* Ensure it appears above empty part */
 }
 
-.star.half .half-empty {
+.star-view.half .half-empty {
   color: lightgray; /* Empty half color */
   position: absolute;
   top: 0;
