--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,11 @@ body {
   background-color: black !important;
   color: white !important;
 }
+
+.flex-gap-15 {
+  display: flex;
+  gap: 15px;
+}
+.flex-view {
+  display: flex;
+}
