--- a/src/css/AccountSettings.css
+++ b/src/css/AccountSettings.css
@@ -9,7 +9,7 @@
 .account-settings-page {
   padding: 20px;
   background-color: #f8f9fa;
-  width: 1020px;
+  /* width: 1120px; */
 }
 
 .settings-menu {
