Quick changes in the order tracking UI

--- a/src/css/MyOrders.css
+++ b/src/css/MyOrders.css
@@ -144,3 +144,9 @@
 .track-order-link:hover {
   text-decoration: underline;
 }
+
+#order-tracking-id-text {
+  font-size: 15px;
+  font-weight: 500;
+  color: #63625f;
+}
