--- a/src/css/MyOrders.css
+++ b/src/css/MyOrders.css
@@ -5,17 +5,13 @@
 
 .order-card img {
   max-width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: contain;
+  /* position: absolute; */
+  /* top: 0;
+  left: 0; */
+  /* object-fit: contain; */
   object-position: center;
   transition: transform 0.3s ease;
 }
-/* 
-.order-card a {
-  color: #007bff;
-} */
 
 .order-card a:hover {
   text-decoration: underline;
@@ -97,12 +93,34 @@
 }
 
 .order-item-img-column {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
   padding: 10px;
-  position: relative;
-  overflow: hidden;
-  max-height: 170px;
-  max-width: 150px;
 }
+.image-and-quantity-column {
+  position: relative;
+  width: 10rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.quantity-badge {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: #fff;
+  color: #000;
+  font-size: 0.75rem;
+  font-weight: 700;
+  padding: 0.35rem 0.5rem;
+  border-radius: 9999px;
+  box-shadow: 0 0px 3px 2px #e2dede;
+  line-height: 1;
+  z-index: 10;
+}
+
 .order-card-header-links {
   font-weight: 400;
   text-align: right;
@@ -138,15 +156,62 @@
   background-color: white !important;
 }
 
-.track-order-link {
+a.track-order-link {
   text-decoration: none;
 }
-.track-order-link:hover {
-  text-decoration: underline;
+a.track-order-link:hover {
+  text-decoration: none;
 }
 
 #order-tracking-id-text {
   font-size: 15px;
   font-weight: 500;
   color: #63625f;
+}
+
+.return-order-link {
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.order-return-header a {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.order-return-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.order-tracking-link-column {
+  text-align: center;
+}
+
+.order-item-status {
+  font-size: 13px;
+  background: #ecf4f7;
+  position: relative;
+  padding: 7px;
+  color: #748b99;
+  font-weight: 600;
+  border-radius: 15px;
+  border: 1px solid #9a9ab0;
+  transition: all 0.9s ease;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+span .status-show {
+  display: block !important;
+  transition: all 0.9s ease;
+}
+
+span.status-hidden {
+  display: none !important;
+  transition: all 0.9s ease;
 }
