--- a/src/css/ProductDetails.css
+++ b/src/css/ProductDetails.css
@@ -1,5 +1,5 @@
 .product-container {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto;
   padding: 15px;
   font-family: Arial, sans-serif;
@@ -12,6 +12,7 @@
 
 .product-info {
   display: grid;
+  max-width: 500px;
 }
 
 .basic-details h1 {
@@ -34,6 +35,7 @@
 .product-description {
   margin: 10px 0;
   color: #555;
+  font-size: 0.93rem;
 }
 
 .product-rating a {
@@ -72,6 +74,7 @@
   background: orange;
   color: black;
   border: 3px solid orange !important;
+  width: max-content;
 }
 
 .btn-add-to-cart:hover {
@@ -85,6 +88,7 @@
   color: darkorange !important;
   font-weight: bold !important;
   transition: font 0.7s ease;
+  width: max-content;
 }
 
 .btn-buy-now:hover {
