--- a/src/css/CartPage.css
+++ b/src/css/CartPage.css
@@ -175,3 +175,9 @@ h1 {
   font-size: 18px;
   font-weight: bold;
 }
+
+.error-message {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 5px;
+}
