--- a/src/css/HeroBanner.css
+++ b/src/css/HeroBanner.css
@@ -13,3 +13,156 @@
 .hero-text p {
   font-size: 1rem;
 }
+
+.hero-features {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
+  gap: 20px;
+  margin-top: 50px;
+}
+
+.featured-categories-grid {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.featured-category-card {
+  background: #f8f9fa;
+  border-radius: 3px;
+  padding: 25px 20px;
+  width: 140px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.featured-category-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
+}
+
+.featured-category-card.icon-wrapper {
+  margin-bottom: 10px;
+}
+
+.feature-section {
+  padding: 10px;
+  background: #e5e5e5;
+}
+
+.feature-section h3 {
+  font-size: 1.5rem;
+  margin-bottom: 25px;
+  color: #333;
+  font-weight: 600;
+}
+
+.feature-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 10px;
+}
+
+.feature-cards::-webkit-scrollbar {
+  height: 6px;
+}
+
+.feature-cards::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 10px;
+}
+
+.features-product-card {
+  /* width: 190px; */
+  background: #fff;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
+  overflow: hidden;
+  transition: transform 0.3s ease;
+}
+
+.features-product-image {
+  width: 100%;
+  height: 150px;
+  position: relative;
+  overflow: hidden;
+}
+
+.features-product-card a {
+  text-decoration: none;
+}
+
+.features-product-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  transition: transform 0.3s ease;
+  right: 0;
+}
+
+.shop-by-prices .features-product-image img {
+  object-fit: cover;
+}
+
+.hero-features .features-product-info {
+  padding: 5px 0px;
+}
+
+.hero-features .features-product-info h5 {
+  font-size: 0.8rem;
+  color: #333;
+  padding-left: 5px;
+  text-align: left;
+
+  -webkit-line-clamp: 2;
+  max-height: 86.4px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  text-rendering: optimizeLegibility;
+}
+
+.hero-features .features-product-info p {
+  font-size: 0.9rem;
+  color: #e63946;
+  font-weight: 600;
+}
+
+.hero-features .features-product-info p span {
+  font-size: 0.8rem;
+  text-decoration: line-through;
+  color: #000;
+  padding-right: 5px;
+  font-weight: 500;
+}
+
+.product-image-box {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 2px;
+}
+.product-image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  transition: transform 0.3s ease;
+  right: 0;
+}
+
+@media (max-width: 768px) {
+  .hero-features {
+    grid-template-columns: 1fr;
+  }
+}
