--- a/src/css/ProductsPage.css
+++ b/src/css/ProductsPage.css
@@ -1,9 +1,19 @@
+.products-page-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .product-grid {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
   padding: 20px;
+}
+
+.products {
+  flex-grow: 1;
 }
 
 /* .product-grid {
@@ -26,14 +36,13 @@
   height: 250px;
   overflow: hidden;
   position: relative;
-  /* border: 1px solid lightgray; */
   border-radius: 2px;
 }
 .product-image-box img {
-  width: 100%; /* Fill the box width */
-  height: 100%; /* Fill the box height */
-  object-fit: contain; /* Preserve aspect ratio, cropping if necessary */
-  object-position: center; /* Center the image inside the box */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
   top: 0;
   bottom: 0;
   left: 0;
@@ -52,6 +61,11 @@
 }
 .product-link-div {
   cursor: pointer;
+}
+
+.product-link-div a {
+  text-decoration: none;
+  color: inherit;
 }
 .product-non-link-div {
   padding: 15px;
@@ -96,4 +110,11 @@
 
 .color-green {
   color: green;
+}
+
+.no-products-available {
+  padding: 20px;
+  font-size: 1.5rem;
+  color: #b1b1b1;
+  font-weight: 600;
 }
