--- a/src/css/SignInPage.css
+++ b/src/css/SignInPage.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #ffffff; /* White Theme */
+  background-color: #f1f1f1;
 }
 
 .signin-box {
@@ -77,15 +77,15 @@ body {
 }
 
 .signin-btn {
-  background-color: #ffc107; /* Yellow Button */
-  color: #333;
+  background-color: #ffc107 !important;
+  color: #333 !important;
+  font-weight: bold !important;
 }
 
 .signin-btn:hover {
-  background-color: #e0a800;
+  background-color: #e0a800 !important;
 }
 
-/* Additional Links */
 .additional-links {
   text-align: center;
   margin-top: 20px;
@@ -93,15 +93,15 @@ body {
 
 .link {
   text-decoration: none;
-  font-weight: bold;
 }
 
 .forgot-link {
-  color: #007bff; /* Blue for forgot password */
+  color: #007bff;
 }
 
 .signup-link {
-  color: #dc3545; /* Red for sign-up link */
+  color: #dc3545;
+  font-weight: bold;
 }
 
 .link:hover {
